fix all form alignment issues and nav alignment issue.

--- a/frontend/src/components/styles/NewJobPost.scss
+++ b/frontend/src/components/styles/NewJobPost.scss
@@ -40,6 +40,8 @@
 	}
 
 	#city-salary {
+		display: flex;
+		justify-content: center;
 		min-width: 100%;
 	}
 
