--- a/frontend/src/components/styles/NewProjectPost.scss
+++ b/frontend/src/components/styles/NewProjectPost.scss
@@ -38,6 +38,8 @@
 }
 
 #desc-section {
+	display: flex;
+	justify-content: center;
 	min-width: 100%;
 }
 
